<package format="2">
    <name>clear_costmap_recovery</name>
    <version>1.12.13</version>
    <description>

        This package provides a recovery behavior for the navigation stack that attempts to clear space by reverting the costmaps used by the navigation stack to the static map outside of a given area.

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/clear_costmap_recovery</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>nav_core</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>eigen</exec_depend>

    <export>
        <nav_core plugin="${prefix}/ccr_plugin.xml" />
    </export>
</package>


