<package format="2">
    <name>costmap_2d</name>
    <version>1.12.13</version>
    <description>
        This package provides an implementation of a 2D costmap that takes in sensor
        data from the world, builds a 2D or 3D occupancy grid of the data (depending
        on whether a voxel based implementation is used), and inflates costs in a
        2D costmap based on the occupancy grid and a user specified inflation radius.
        This package also provides support for map_server based initialization of a
        costmap, rolling window based costmaps, and parameter based subscription to
        and configuration of sensor topics.
    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>David V. Lu!!</author>
    <author>Dave Hershberger</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/costmap_2d</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>laser_geometry</build_depend>
    <build_depend>map_msgs</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>voxel_grid</build_depend>
    <build_depend>srslib_timing</build_depend>

    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>laser_geometry</exec_depend>
    <exec_depend>map_msgs</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rostest</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>voxel_grid</exec_depend>
    <exec_depend>srslib_timing</exec_depend>

    <test_depend>map_server</test_depend>
    <test_depend>rosbag</test_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
